# Operating-Systems-Work

./: README.md
Operating_Systems_Work/OSF15_Exercise1/Exercise1/: command.c  main.c  matrix.c
Operating_Systems_Work/OSF15_Exercise2/bs/src/: block_store.c
Operating_Systems_Work/OSF15_Exercise3/include/: page_swap.h
Operating_Systems_Work/OSF15_Exercise3/src/: page_swap.c
Operating_Systems_Work/OSF15_Exercise3/test/: runner.c
Operating_Systems_Work/OSF15_Lib2/OSF15_Library/block_store/include/: block_store.h
Operating_Systems_Work/OSF15_Library/dyn_array/include/: dyn_array.h
Operating_Systems_Work/OSF15_Project1/src/: process_scheduling.c
Operating_Systems_Work/OSF15_Project2/: README.md
Operating_Systems_Work/OSF15_Project2/src/: FonefiveFS.c
Operating_Systems_Work/OSF15_Project2/test/: test.c
Operating_Systems_Work/OSF15_Project2M1/: submission.patch
Operating_Systems_Work/OSF15_Project2M1/include/: FonefiveFS.h
Operating_Systems_Work/OSF15_Project2M1/src/: FonefiveFS.c
Operating_Systems_Work/OSF15_Project2M1/test/: test.c
Operating_Systems_Work/OSF15_Project3/: CMakeLists.txt  README.md
Operating_Systems_Work/OSF15_Project3/OSF15_Project1/include/: process_scheduling.h
Operating_Systems_Work/OSF15_Project3/data/: cities.csv  country_leadership.csv  country_stats.csv
Operating_Systems_Work/OSF15_Project3/include/: shelp.h
Operating_Systems_Work/OSF15_Project3/src/: shell.c  shelp.c
Operating_Systems_Work/OSF15_Project3/test/: test.c
